@@ -223,6 +223,10 @@ namespace libtorrent
 				write_char(out, 'e');
 				ret += 2;
 				break;
+			case entry::preformatted_t:
+				std::copy(e.preformatted().begin(), e.preformatted().end(), out);
+				ret += e.preformatted().size();
+				break;
 			default:
 				// trying to encode a structure with uninitialized values!
 				TORRENT_ASSERT_VAL(false, e.type());
